--- a/dockerfiles.x86/dockerfile.torch_npu_cann
+++ b/dockerfiles.x86/dockerfile.torch_npu_cann
@@ -25,31 +25,30 @@ RUN . $CONDA_HOME/bin/activate \
     attrs numpy decorator sympy cffi pyyaml pathlib2 psutil protobuf scipy requests absl-py
 
 # CANN installers
-COPY ./installers/Ascend-cann-toolkit_8.0.0_linux-x86_64.run /installers/cann/
-COPY ./installers/Ascend-cann-kernels-910b_8.0.0_linux-x86_64.run /installers/cann/
+COPY ./installers/Ascend-cann-toolkit_8.2.RC1_linux-x86_64.run /installers/cann/
+COPY ./installers/Ascend-cann-kernels-910b_8.2.RC1_linux-x86_64.run /installers/cann/
 
 WORKDIR /installers/cann/
 RUN . $CONDA_HOME/bin/activate \
-    && bash ./Ascend-cann-toolkit_8.0.0_linux-x86_64.run --install --quiet \
-    && bash ./Ascend-cann-kernels-910b_8.0.0_linux-x86_64.run --install --quiet
+    && bash ./Ascend-cann-toolkit_8.2.RC1_linux-x86_64.run --install --quiet \
+    && bash ./Ascend-cann-kernels-910b_8.2.RC1_linux-x86_64.run --install --quiet
 
 # NOTE: until this stage, can already compile & run AscendC code in C++ without PyTorch interface
 
 # download torch and torch_npu installers
 # should match CANN version: https://gitee.com/ascend/pytorch#ascend-auxiliary-software
-RUN wget --progress=bar:force:noscroll --no-check-certificate https://download.pytorch.org/whl/cpu/torch-2.4.0%2Bcpu-cp311-cp311-linux_x86_64.whl
-RUN wget --progress=bar:force:noscroll --no-check-certificate https://gitee.com/ascend/pytorch/releases/download/v6.0.0-pytorch2.4.0/torch_npu-2.4.0.post2-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl
-
+RUN wget --progress=bar:force:noscroll --no-check-certificate https://download.pytorch.org/whl/cpu/torch-2.6.0%2Bcpu-cp311-cp311-linux_x86_64.whl
+RUN wget --progress=bar:force:noscroll --no-check-certificate https://gitee.com/ascend/pytorch/releases/download/v7.1.0-pytorch2.6.0/torch_npu-2.6.0-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl
 RUN . $CONDA_HOME/bin/activate \
-    && pip install ./torch-2.4.0+cpu-cp311-cp311-linux_x86_64.whl \
-    && pip install ./torch_npu-2.4.0.post2-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl
+    && pip install ./torch-2.6.0+cpu-cp311-cp311-linux_x86_64.whl \
+    && pip install ./torch_npu-2.6.0-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl
 
 # extra utils
 RUN . $CONDA_HOME/bin/activate \
     && pip install \
     ipython pytest expecttest hypothesis \
     pybind11 pybind11-stubgen \
-    bfloat16
+    bfloat16 ml_dtypes
 # pybind11 is needed for torch extension
 # bfloat16 is needed for generate input data in numpy
 
@@ -57,15 +56,13 @@ RUN . $CONDA_HOME/bin/activate \
 RUN . $CONDA_HOME/bin/activate \
     && pip install --no-cache-dir numpy==1.26.4
 
-# Pre-compile ascendc-templates https://gitee.com/ascend/ascendc-templates
-# Tested with commit 1ba93d0 on 2025/04/28
-# https://gitee.com/ascend/ascendc-templates/commit/1ba93d0d300950a4eb616ddf271c7e43024b4e94
+# Pre-compile catlass
 WORKDIR /installers/
-RUN git clone https://gitee.com/ascend/ascendc-templates \
-    && cd ascendc-templates \
-    && git checkout 1ba93d0d300950a4eb616ddf271c7e43024b4e94
+RUN git clone https://gitee.com/ascend/catlass\
+    && cd catlass \
+    && git checkout v1.0.0
 
-WORKDIR /installers/ascendc-templates
+WORKDIR /installers/catlass
 
 # compile C++ examples
 RUN . $CONDA_HOME/bin/activate \
@@ -82,7 +79,17 @@ RUN . $CONDA_HOME/bin/activate \
     && export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/usr/local/Ascend/ascend-toolkit/latest/`uname -i`-linux/devlib \
     && bash scripts/build.sh torch_library \
     && bash scripts/build.sh python_extension \
-    && pip install output/python_extension/torch_act-*.whl
+    && pip install output/python_extension/*.whl
 
 # NOTE: here just test compile 
 # For actual execution, need passing necessary device args to `docker run`
+
+# extra operators
+WORKDIR /installers/cann/
+
+COPY ./installers/Ascend-cann-nnal_8.2.RC1_linux-x86_64.run /installers/cann/
+RUN . $CONDA_HOME/bin/activate \
+    && . /usr/local/Ascend/ascend-toolkit/set_env.sh \
+    && bash ./Ascend-cann-nnal_8.2.RC1_linux-x86_64.run --install --quiet
+
+WORKDIR /installers/
